--- a/template.yaml
+++ b/template.yaml
@@ -26,10 +26,10 @@ Resources:
       CodeUri: .
       Environment:
         Variables:
-          TABLE_NAME: resume-experience-guillermo   # Replace "guillermo" with your name
+          TABLE_NAME: resume-experience-kiera   # Replace "kiera" with your name
       Policies:
         - DynamoDBReadPolicy:
-            TableName: resume-experience-guillermo  # Replace "guillermo" with your name
+            TableName: resume-experience-kiera  # Replace "kiera" with your name
       Events:
         GetExperience:
           Type: Api
